--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,10 +20,7 @@ apache-airflow = {version = "^1.10", optional = true}
 boto3 = "^1.10"
 
 [tool.poetry.dev-dependencies]
-pytest = [
-    {version = "^4.6", python = "^2.7"},
-    {version = "^5.3", python = "^3.0"}
-]
+pytest = "^3.0"
 moto = "^1.3"
 
 [tool.poetry.extras]
