--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,14 @@ version = "0.1.2"
 description = "Airflow ECR plugin"
 authors = ["Sandeep Aggarwal <asandeep.me@gmail.com>"]
 license = "Apache-2.0"
+
 readme = "README.md"
+
 homepage = "https://github.com/asandeep/airflow-ecr-plugin"
 repository = "https://github.com/asandeep/airflow-ecr-plugin.git"
+
+keywords = ["airflow", "ecr", "docker"]
+
 classifiers = [
     "Development Status :: 4 - Beta",
     "Environment :: Plugins",
@@ -15,16 +20,30 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "^2.7 || ^3.0"
-apache-airflow = {version = "^1.10", optional = true}
+python = "^2.7.5 || ^3.6"
+apache-airflow = {version = "^1.10.9", optional = true}
 boto3 = "^1.10"
 
 [tool.poetry.dev-dependencies]
-pytest = "^3.0"
-moto = "^1.3"
+pytest = "^4.6"
+moto = "^1.3.14"
+tox = "^3.14.5"
 
 [tool.poetry.extras]
 airflow = ["apache-airflow"]
+
+[tool.tox]
+legacy_tox_ini = """
+[tox]
+isolated_build = true
+envlist = py27, py36
+
+[testenv]
+whitelist_externals = poetry
+commands =
+    poetry install -E airflow
+    poetry run pytest
+"""
 
 [build-system]
 requires = ["poetry>=0.12"]
