Do not clean artifacts for poetry deploy provider.

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ jobs:
         - poetry build
       deploy:
         - provider: script
+          skip_cleanup: true
           script: poetry publish
           on:
             tags: true
